# easy-geo-plotting-example

./: README.md  folium-example.py  geojson-example.py  geolonia.html  index.html  main.py  pyproject.toml
.github/workflows/: gh-pages.yml
