[tool.poetry]
name = "easy-geo-plotting-example"
version = "0.1.0"
description = ""
authors = ["KOIZUMI teruaki <1755900+terukizm@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
folium = "^0.12.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
taskipy = "^1.6.0"
isort = "^5.7.0"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
